docs/css/main.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap');

body {
    font-family: "Inter", sans-serif;
    font-weight: 400;
    color: #333;
    line-height: 1.8em;
    font-size: 17px;
}

a {
    color: #3700ff;
    text-decoration: none;
    word-break: break-word;
}
    a:hover {
        border-bottom: 2px solid #3700ff;
    }

html,button,input,select,textarea {
    color: #333;
}

::-moz-selection {
    background: #3700ff;
    text-shadow: none;
    color: #fff;
}

::selection {
    background: #3700ff;
    text-shadow: none;
    color: #fff;
}

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1rem 0;
    padding: 0;
}

img {
    margin: 10px auto 10px auto;
    max-width: 100%;
    display: block;
}

a img {
    border:none;
}

figure {
    margin: 0;
    text-align: center;
}

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}

table {
  -ms-overflow-style: -ms-autohiding-scrollbar;
  -webkit-overflow-scrolling: touch;
  background-color: transparent;
  margin-bottom: 1rem;
  overflow-x: auto;
  width: 100%;
}

table th,
table td {
  border-bottom: 1px solid #dee2e6;
  padding: 0.75rem;
  vertical-align: top;
}

table thead th {
  border-bottom: 2px solid #dee2e6;
  vertical-align: bottom;
}

table tbody + tbody {
  border-top: 2px solid #dee2e6;
}

table tbody tr:nth-of-type(even) {
  background-color: rgba(0, 0, 0, 0.15);
}

table th {
  background-color: #212529;
  border-color: #32383e;
  color: #fff;
}

textarea {
    resize: vertical;
}

blockquote {
    margin-left: 1rem;
    font-style: italic;
    font-size: 1.4rem;
    font-family: Georgia,bitstream charter,serif;
    border-left: 3px solid;
    border-color: #3700ff;
    padding-left: 20px;
}

blockquote cite {
    font-size: 70%;
    opacity: .8;
}

blockquote em {
    font-weight: 600;
}


h1, h2, h3, h4, h5, h6 {
    color: #333;
    font-weight: 500;
    line-height: 1.3em;
    margin: 30px 0 20px 0;
}

h1 {
    font-size: 2.75rem;
}

h2 {
    font-size: 2rem;
}

h3 {
    font-size: 1.6rem;
}

h4 {
    font-size: 1.2rem;
}

h5 {
    font-size: 1rem;
}

h6 {
    font-size: .9rem;
}

.align-center {
    text-align: center;
}

.align-left {
    text-align: left;
}

.align-right {
    text-align: right;
}

ul {
    padding-left: 15px;
}

ul.flat {
    margin: 0;
    padding: 0;
}

ul.flat li {
    display: block;
    list-style: none;
    margin-left: 0;
}

.prevent-collapse {
    min-height: .1rem
}

.smaller {
    font-size: 70%;
}

ul {
    list-style: disc inside;
}

.post ul li {
    margin-bottom: 10px;
}

.post ul li p {
    display: inline;
}

.highlight pre {
    margin-bottom: 0;
    margin-top: 0;
    padding: 20px;
    background-color: transparent !important;
}

.highlight {
    background: 0 0;
    background-color: #FAFAFA;
}

.wrapper {
    max-width: 760px;
    margin: 0 auto;
}

.container {
    max-width: 800px;
    margin-top: 30px;
}

.header {
    margin-bottom: 20px;
    padding-bottom: 20px;
}

.header .avatar {
    float: left;
    margin: 0 20px 0 0;
}
.header .avatar img {
    width: 64px;
    height: 64px;
    overflow: hidden;
    border-radius: 100%;
}
.header .site-title {
    margin: 0;
}
    .site-title a {
        color: #333;
        text-decoration: none !important;
    }
    .site-title a:hover {
        border-bottom-width: 3px;
    }

.header .site-description {
    display: flex;
    justify-content: space-between;
}
    .header .site-description p {
        margin: 0 0 10px 0;
    }

.header nav {
    border-top: 1px solid #eee;
    padding-top: 15px;
}

.header nav ul,
.header nav li {
    margin: 0;
    padding: 0;
}

.header nav li {
    display: inline-block;
    list-style: none;
    margin: 0 30px 0 0;
}
    .header nav.social a {
        color: #333;
    }
    .header nav.social a:hover {
        color: #3700ff;
    }

.header .site-description nav {
    margin: 0;
    padding: 0;
    border: none;
    min-width: 50px;
    margin-left: 15px;
}

.header .site-description nav ul svg {
    max-height: 15px;
}

.header .site-description .scheme-toggle {
    height: 100%;
}

.header .site-description .scheme-toggle a svg {
    max-height: 15px;
}

.header .site-description .scheme-toggle a.dark svg {
    fill: #f8e04f;
    color: #f8e04f;
}

.header .site-description .scheme-toggle a.light svg {
    fill: grey;
    color: black;
}

.section .section-header {
    font-size: 0.75rem;
    font-weight: 600;
    text-transform: uppercase;
    color: #999;
    margin-bottom: 20px;
    letter-spacing: 1px;
}

.recent-posts .posts .post {
    margin-bottom: 45px;
}

.post-header {
    display: flex;
}
.post-header .meta .date {
    margin-right: 30px;
    width: 64px;
    text-align: center;
}
.post-header .meta .date .day {
    font-family: "Playfair Display", serif;
    font-weight: 700;
    line-height: 0.45em;
    font-size: 3em;
    display: block;
    margin-bottom: 20px;
}
.post-header .meta .date .rest {
    display: block;
    font-size: 0.75em;
}
.post-header h1.title {
    margin: -10px 0 0 0;
}

.post .title.small {
    margin: 0 0 10px 0;
}
.post .post-header {
    margin-bottom: 30px;
}

.post .draft-label {
    color: #3700ff;
    text-decoration: none;
    padding: 2px 4px;
    border-radius: 4px;
    margin-left: 6px;
    background-color: #f9f2f4;
}

.post .tags a {
    display: inline-block;
    border: 1px solid #3700ff;
    border-radius: 3px;
    padding: 0px 6px;
    color: #3700ff;
    line-height: 20px;
    font-size: 0.85em;
    text-decoration: none;
    margin: 0 10px 0 0;
}

.list .posts .post-header .meta {
    margin-bottom: 0;
    margin-left: 5px;
}

.footer {
    text-align: right;
    font-size: 0.75em;
    color: #999;
    border-top: 1px solid #f4f4f4;
    margin-top: 40px;
    padding: 15px 0;
}
    .footer a {
        color: #666;
    }
    .footer a:hover {
        color: #3700ff;
    }

.tag-cloud {
    margin-top: 20px;
}

.tag-cloud a {
    margin-right: 15px;
}

.pagination {
    margin: 0;
    padding: 0;
    text-align: left;
    display: flex;
    justify-content: space-between;
}

.pagination li {
    list-style: none;
    display: inline-block;
    margin: 0;
    padding: 0;
}

.pagination .page-prev {
    margin-right: 20px;
    padding-right: 20px;
}

.pagination .page-item.page-prev {
    text-align: left;
}

.pagination .page-item.page-next {
    text-align: right;
}

@media (max-width: 900px) {
    body {
        padding: 20px;
    }

    h1 {
        font-size: 1.8rem;
    }

    h2 {
        font-size: 1.6rem;
    }

    h3 {
        font-size: 1.2rem;
    }

    h4 {
        font-size: 1rem;
    }

    .container {
        margin-top: 10px;
    }

    .header .nav.social li {
        margin: 0;
    }
    .header .nav li {
        margin: 0 10px 0 0;
        font-size: 0.875em;
    }

    table {
      -ms-overflow-style: -ms-autohiding-scrollbar;
      -webkit-overflow-scrolling: touch;
      display: block;
      overflow-x: auto;
      width: 100%;
    }
}

@media (max-width: 400px) {
    .header .nav.social {
        min-width: auto;
        margin: 0;
    }
    .header .site-description {
        font-size: 1em;
        margin-top: 10px;
        font-size: 0.875em;
        line-height: 1.4em;
    }
}

/* Akila's custom CSS */
code {
    color: #c7254e;
    background-color: #F8F8F8;
}

pre > code {
    color: #93a1a1;
}

